 8. Place 'Cancel', etc., buttons on the right for Windows, or if
    'altBtnLayout' (or 'altBtnLayout=true') is passed as a URL parameter.
 9. Disable downloadig if 'download' URL parameter is not 'native' or 'browser'
    (default).
10. Don't auto-close 'Manage players' dialog if all players dissapear whilst
    its open, just state 'No players'
11. Add 'Descending' to album sorts.

2.10.5
------
1. When saving SlimBrowse parameters, for future list calls, only save those
   whose key ends with "_id"

2.10.4
------
1. Fix colours in 'Help' page.
2. When updating rating in now-playing only update internal state if still
   playing same track on LMS response.
3. Use library_id in 'All songs' listing.
4. Add Breeze and Breeze Dark colour schemes for Linux.
5. Change window title to use " - "
6. Increase artwork sizes for high DPI screens.
7. When building SlimBrowse commands use any parameters from previous list
   request.

2.10.3
------
1. Fix missing artist_id when clicking on a service list entry under an
   artist.
2. Hide position tooltip after 2 seconds.
3. Add some CSS to prevent scrolling of 'body' in Safari.
4. Show ratings in 'All songs' listings.
5. For mobile devices add a check button at the right of non-search text fields
   containing text.
6. If using RatingsLight always assume max rating of 10 (so 1/2 increments).
7. Update platform checks to also use newer navigator.userAgentData

2.10.2
------
1. Adjust screensaver text positions.
2. Fix non-wrapping text items in lists.
3. Fix clicking on text items when there is only 1 item in list.
4. Remove handling of 'showBriefly' messages.
5. Remove 'Ctrl+H' shortcut for 'Help' - shortcut conflicts with macOS.
6. Treat 'text' items with icon/image as standard items.
7. Try to detect, and ignore, swipe ups on mobile devices in desktop to show
   navigation bar.

2.10.1
------
1. Fix missing song information in now-playing.

2.10.0
------
 1. Add player settings plugins to 'Player settings' dialog.