@@ -16,6 +16,7 @@
 10. Don't auto-close 'Manage players' dialog if all players dissapear whilst
     its open, just state 'No players'
 11. Add 'Descending' to album sorts.
+12. Don't close 'Manage players' on 'esc' if dragging, simply end drag.
 
 2.10.5
 ------
